set min-height to avoid dropdowns getting cut off

--- a/services/QuillLMS/app/assets/stylesheets/pages/premium_hub/filterable-reports.scss
+++ b/services/QuillLMS/app/assets/stylesheets/pages/premium_hub/filterable-reports.scss
@@ -30,6 +30,7 @@
     min-width: 333px;
     width: 333px;
     max-height: 100vh;
+    min-height: 100vh;
     overflow: scroll;
     top: 0;
     padding: 0px;
